cmake_minimum_required(VERSION 3.10)

file(GLOB EXAMPLES "*.cpp")
if(WIN32)
    list(FILTER EXAMPLES EXCLUDE REGEX "^unix_.*\\.cpp$")
endif()
foreach(src IN LISTS EXAMPLES)
    string(REGEX REPLACE "^.*/([^/.]+).cpp" "\\1" target ${src})
    message(STATUS "Example target: " ${target})
    add_executable(${target} ${src})
    target_link_libraries(${target} lmnet)
endforeach(src)
