cmake_minimum_required(VERSION 3.10)

file(GLOB EXAMPLES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")
if(WIN32)
    list(FILTER EXAMPLES EXCLUDE REGEX "^unix_.*\\.cpp$")
endif()
foreach(src IN LISTS EXAMPLES)
    get_filename_component(target "${src}" NAME_WE)
    message(STATUS "Example target: ${target}")
    add_executable(${target} "${src}")
    target_link_libraries(${target} lmnet)
endforeach()
